--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "del": "^5.1.0",
     "gulp": "4.0.x",
     "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.2.0",
     "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
